HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractPredicateNonBool/Source/Main.uv
//! Rejected contract specimen for non-boolean contract predicates.

public procedure contractPredicateNonBoolReference(value: i32) -> i32
|: value
{
    return value
}
